# ohmimetro

./: CMakeLists.txt  README.md  diagram.json  ohmimetro.c  wokwi.toml
lib/: ws2812.pio.h
